--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ Verb
 
 </script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HSK</title>
 </head>
 <body onload="f()">
 <div id="card">
