--- a/index.html
+++ b/index.html
@@ -336,8 +336,331 @@
         ['\u{9519}','cu\u{F2}','wrong'],
         ['\u{5FEB}\u{4E50}','ku\u{E0}il\u{E8}','happy'],
     ]
+
+    const hsk3 = [
+        ['\u{963F}\u{59E8}','\u{101}y\u{ED}','aunt'],
+        ['\u{554A}','a','ah'],
+        ['\u{77EE}','\u{1CE}i','short'],
+        ['\u{7231}\u{597D}','\u{E0}ih\u{E0}o','hobby'],
+        ['\u{5B89}\u{9759}','\u{101}nj\u{EC}ng','Be quiet'],
+        ['\u{628A}','b\u{1CE}','hold'],
+        ['\u{5427}','ba',''],
+        ['\u{73ED}','b\u{101}n','class'],
+        ['\u{642C}','b\u{101}n','turn; pull'],
+        ['\u{534A}','b\u{E0}n','half'],
+        ['\u{529E}\u{6CD5}','b\u{E0}nf\u{1CE}','Way'],
+        ['\u{529E}\u{516C}\u{5BA4}','b\u{E0}ng\u{14D}ngsh\u{EC}','Office'],
+        ['\u{5E2E}\u{5FD9}','b\u{101}ngm\u{E1}ng','Help'],
+        ['\u{5305}','b\u{101}o','package'],
+        ['\u{9971}','b\u{1CE}o','full'],
+        ['\u{5317}\u{65B9}','b\u{11B}if\u{101}ng','north'],
+        ['\u{88AB}','b\u{E8}i','cover'],
+        ['\u{9F3B}\u{5B50}','b\u{ED}zi','nose'],
+        ['\u{6BD4}','b\u{1D0}','than'],
+        ['\u{6BD4}\u{8F83}','b\u{1D0}ji\u{E0}o','compare'],
+        ['\u{6BD4}\u{8D5B}','b\u{1D0}s\u{E0}i','Match'],
+        ['\u{5FC5}\u{987B}','b\u{EC}x\u{16B}','Must'],
+        ['\u{53D8}\u{5316}','bi\u{E0}nhu\u{E0}','change'],
+        ['\u{8868}\u{793A}','bi\u{1CE}osh\u{EC}','Express'],
+        ['\u{8868}\u{6F14}','bi\u{1CE}oy\u{1CE}n','perform'],
+        ['\u{522B}\u{4EBA}','bi\u{E9}ren','Others'],
+        ['\u{5BBE}\u{9986}','b\u{12B}ngu\u{1CE}n','hotel'],
+        ['\u{51B0}\u{7BB1}','b\u{12B}ngxi\u{101}ng','Refrigerator'],
+        ['\u{624D}','c\u{E1}i','just'],
+        ['\u{83DC}\u{5355}','c\u{E0}id\u{101}n','menu'],
+        ['\u{53C2}\u{52A0}','c\u{101}nji\u{101}','participate in'],
+        ['\u{8349}','c\u{1CE}o','grass'],
+        ['\u{5C42}','c\u{E9}ng','layer'],
+        ['\u{5DEE}','ch\u{E0}','difference'],
+        ['\u{8D85}\u{5E02}','ch\u{101}osh\u{EC}','Supermarket'],
+        ['\u{886C}\u{886B}','ch\u{E8}nsh\u{101}n','shirt'],
+        ['\u{6210}\u{7EE9}','ch\u{E9}ngj\u{EC}','achievement'],
+        ['\u{57CE}\u{5E02}','ch\u{E9}ngsh\u{EC}','City'],
+        ['\u{8FDF}\u{5230}','ch\u{ED}d\u{E0}o','Late'],
+        ['\u{51FA}\u{73B0}','ch\u{16B}xi\u{E0}n','Appear'],
+        ['\u{53A8}\u{623F}','ch\u{FA}f\u{E1}ng','Kitchen'],
+        ['\u{9664}\u{4E86}','ch\u{FA}le','except'],
+        ['\u{6625}','ch\u{16B}n','spring'],
+        ['\u{8BCD}\u{8BED}','c\u{ED}y\u{1D4}','terms'],
+        ['\u{806A}\u{660E}','c\u{14D}ngming','clever'],
+        ['\u{6253}\u{626B}','d\u{1CE}s\u{1CE}o','Clean'],
+        ['\u{6253}\u{7B97}','d\u{1CE}su\u{E0}n','Plan'],
+        ['\u{5E26}','d\u{E0}i','belt'],
+        ['\u{62C5}\u{5FC3}','d\u{101}nx\u{12B}n','Worry'],
+        ['\u{86CB}\u{7CD5}','d\u{E0}ng\u{101}o','Cake'],
+        ['\u{5F53}\u{7136}','d\u{101}ngr\u{E1}n','Of course'],
+        ['\u{5730}','de',''],
+        ['\u{7684}','de',''],
+        ['\u{5F97}','de',''],
+        ['\u{706F}','d\u{113}ng','lamp'],
+        ['\u{4F4E}','d\u{12B}','low'],
+        ['\u{5730}\u{65B9}','d\u{EC}fang','local'],
+        ['\u{5730}\u{94C1}','d\u{EC}ti\u{11B}','metro'],
+        ['\u{5730}\u{56FE}','d\u{EC}t\u{FA}','Map'],
+        ['\u{7535}\u{68AF}','di\u{E0}nt\u{12B}','Elevator.'],
+        ['\u{7535}\u{5B50}\u{90AE}\u{4EF6}','di\u{E0}nz\u{1D0}y\u{F3}uji\u{E0}n','E-mail'],
+        ['\u{4E1C}','d\u{14D}ng','east'],
+        ['\u{51AC}','d\u{14D}ng','winter'],
+        ['\u{52A8}\u{7269}','d\u{F2}ngw\u{F9}','Animal'],
+        ['\u{77ED}','du\u{1CE}n','short'],
+        ['\u{6BB5}','du\u{E0}n','paragraph'],
+        ['\u{953B}\u{70BC}','du\u{E0}nli\u{E0}n','Physical exercise'],
+        ['\u{591A}\u{4E48}','du\u{14D}me','what'],
+        ['\u{997F}','\u{E8}','hungry'],
+        ['\u{800C}\u{4E14}','\u{E9}rqi\u{11B}','And'],
+        ['\u{8033}\u{6735}','\u{11B}rduo','Ears'],
+        ['\u{53D1}\u{70E7}','f\u{101}sh\u{101}o','Have a fever'],
+        ['\u{53D1}\u{73B0}','f\u{101}xi\u{E0}n','find'],
+        ['\u{65B9}\u{4FBF}','f\u{101}ngbi\u{E0}n','convenient'],
+        ['\u{653E}','f\u{E0}ng','discharge'],
+        ['\u{653E}\u{5FC3}','f\u{E0}ngx\u{12B}n','Don\u{2019}t worry'],
+        ['\u{5206}','f\u{113}n','branch'],
+        ['\u{9644}\u{8FD1}','f\u{F9}j\u{EC}n','nearby'],
+        ['\u{590D}\u{4E60}','f\u{F9}x\u{ED}','Review'],
+        ['\u{5E72}\u{51C0}','g\u{101}nj\u{EC}ng','clean'],
+        ['\u{6562}','g\u{1CE}n','dare'],
+        ['\u{611F}\u{5192}','g\u{1CE}nm\u{E0}o','Cold'],
+        ['\u{521A}\u{624D}','g\u{101}ngc\u{E1}i','just'],
+        ['\u{8DDF}','g\u{113}n','with'],
+        ['\u{6839}\u{636E}','g\u{113}nj\u{F9}','according to'],
+        ['\u{66F4}','g\u{E8}ng','more'],
+        ['\u{516C}\u{53F8}','g\u{14D}ngs\u{12B}','company'],
+        ['\u{516C}\u{56ED}','g\u{14D}ngyu\u{E1}n','Park'],
+        ['\u{6545}\u{4E8B}','g\u{F9}shi','Story'],
+        ['\u{522E}\u{98CE}','gu\u{101}f\u{113}ng','Windy'],
+        ['\u{5173}','gu\u{101}n','shut'],
+        ['\u{5173}\u{7CFB}','gu\u{101}nx\u{EC}','relationship'],
+        ['\u{5173}\u{5FC3}','gu\u{101}nx\u{12B}n','Care for'],
+        ['\u{5173}\u{4E8E}','gu\u{101}ny\u{FA}','about'],
+        ['\u{56FD}\u{5BB6}','gu\u{F3}ji\u{101}','Country'],
+        ['\u{679C}\u{6C41}','gu\u{1D2}zh\u{12B}','fruit juice'],
+        ['\u{8FC7}\u{53BB}','gu\u{F2}q\u{F9}','Past times'],
+        ['\u{8FC7}','guo','too'],
+        ['\u{8FD8}\u{662F}','h\u{E1}ish\u{EC}','still'],
+        ['\u{5BB3}\u{6015}','h\u{E0}ip\u{E0}','Fear'],
+        ['\u{6CB3}','h\u{E9}','river'],
+        ['\u{9ED1}\u{677F}','h\u{113}ib\u{1CE}n','blackboard'],
+        ['\u{62A4}\u{7167}','h\u{F9}zh\u{E0}o','passport'],
+        ['\u{82B1} \u{FF08}\u{52A8}\u{FF09}','hu\u{101}','Flower (move)'],
+        ['\u{82B1}\u{56ED}','hu\u{101}yu\u{E1}n','Garden'],
+        ['\u{753B}','hu\u{E0}','painting'],
+        ['\u{574F}','hu\u{E0}i','bad'],
+        ['\u{8FD8}','hu\u{E1}n','still'],
+        ['\u{73AF}\u{5883}','hu\u{E1}nj\u{EC}ng','Environmental Science'],
+        ['\u{6362}','hu\u{E0}n','change'],
+        ['\u{9EC4}','hu\u{E1}ng','yellow'],
+        ['\u{4F1A}\u{8BAE}','hu\u{EC}y\u{EC}','Meeting'],
+        ['\u{6216}\u{8005}','hu\u{F2}zh\u{11B}','perhaps'],
+        ['\u{51E0}\u{4E4E}','j\u{12B}h\u{16B}','almost'],
+        ['\u{673A}\u{4F1A}','j\u{12B}hu\u{EC}','Opportunity'],
+        ['\u{6781}','j\u{ED}','extremely'],
+        ['\u{8BB0}\u{5F97}','j\u{EC}de','remember'],
+        ['\u{5B63}\u{8282}','j\u{EC}ji\u{E9}','Season'],
+        ['\u{68C0}\u{67E5}','ji\u{1CE}nch\u{E1}','inspect'],
+        ['\u{7B80}\u{5355}','ji\u{1CE}nd\u{101}n','simple'],
+        ['\u{5065}\u{5EB7}','ji\u{E0}nk\u{101}ng','Healthy'],
+        ['\u{89C1}\u{9762}','ji\u{E0}nmi\u{E0}n','meet'],
+        ['\u{8BB2}','ji\u{1CE}ng','speak'],
+        ['\u{6559}','ji\u{101}o','teach'],
+        ['\u{89D2}','ji\u{1CE}o','horn'],
+        ['\u{811A}','ji\u{1CE}o','foot'],
+        ['\u{63A5}','ji\u{113}','meet'],
+        ['\u{8857}\u{9053}','ji\u{113}d\u{E0}o','Street'],
+        ['\u{7ED3}\u{5A5A}','ji\u{E9}h\u{16B}n','marry'],
+        ['\u{7ED3}\u{675F}','ji\u{E9}sh\u{F9}','End'],
+        ['\u{8282}\u{76EE}','ji\u{E9}m\u{F9}','program'],
+        ['\u{8282}\u{65E5}','ji\u{E9}r\u{EC}','festival'],
+        ['\u{89E3}\u{51B3}','ji\u{11B}ju\u{E9}','Solve'],
+        ['\u{501F}','ji\u{E8}','borrow'],
+        ['\u{7ECF}\u{5E38}','j\u{12B}ngch\u{E1}ng','Often'],
+        ['\u{7ECF}\u{8FC7}','j\u{12B}nggu\u{F2}','after'],
+        ['\u{7ECF}\u{7406}','j\u{12B}ngl\u{1D0}','manager'],
+        ['\u{4E45}','ji\u{1D4}','long'],
+        ['\u{65E7}','ji\u{F9}','used'],
+        ['\u{5C31}','ji\u{F9}',''],
+        ['\u{4E3E}\u{884C}','j\u{1D4}x\u{ED}ng','hold'],
+        ['\u{53E5}\u{5B50}','j\u{F9}zi','sentence'],
+        ['\u{51B3}\u{5B9A}','ju\u{E9}d\u{EC}ng','Decision'],
+        ['\u{6E34}','k\u{11B}','thirsty'],
+        ['\u{53EF}\u{7231}','k\u{11B}\u{2019}\u{E0}i','Lovely'],
+        ['\u{523B}','k\u{E8}','moment'],
+        ['\u{5BA2}\u{4EBA}','k\u{E8}r\u{E9}n','Guest'],
+        ['\u{7A7A}\u{8C03}','k\u{14D}ngti\u{E1}o','Air conditioner'],
+        ['\u{53E3}','k\u{1D2}u','mouth'],
+        ['\u{54ED}','k\u{16B}','cry'],
+        ['\u{88E4}\u{5B50}','k\u{F9}zi','trousers'],
+        ['\u{7B77}\u{5B50}','ku\u{E0}izi','chopsticks'],
+        ['\u{84DD}','l\u{E1}n','blue'],
+        ['\u{8001}','l\u{1CE}o','old'],
+        ['\u{4E86}','le',''],
+        ['\u{79BB}\u{5F00}','l\u{ED}k\u{101}i','leave'],
+        ['\u{91CC}','l\u{1D0}','in'],
+        ['\u{793C}\u{7269}','l\u{1D0}w\u{F9}','gift'],
+        ['\u{5386}\u{53F2}','l\u{EC}sh\u{1D0}','History'],
+        ['\u{8138}','li\u{1CE}n','face'],
+        ['\u{7EC3}\u{4E60}','li\u{E0}nx\u{ED}','Practice'],
+        ['\u{8F86}','li\u{E0}ng','Car'],
+        ['\u{4E86}\u{89E3}','li\u{1CE}oji\u{11B}','understand'],
+        ['\u{90BB}\u{5C45}','l\u{ED}nj\u{16B}','neighbor'],
+        ['\u{697C}','l\u{F3}u','floor'],
+        ['\u{7EFF}','l\u{1DC}','green'],
+        ['\u{9A6C}','m\u{1CE}','Horse'],
+        ['\u{9A6C}\u{4E0A}','m\u{1CE}sh\u{E0}ng','Right off'],
+        ['\u{5417}','ma',''],
+        ['\u{5356}','m\u{E0}i','sell'],
+        ['\u{6EE1}\u{610F}','m\u{1CE}ny\u{EC}','Satisfied'],
+        ['\u{5E3D}\u{5B50}','m\u{E0}ozi','Hat'],
+        ['\u{7C73}','m\u{1D0}','rice'],
+        ['\u{9762}\u{5305}','mi\u{E0}nb\u{101}o','Bread'],
+        ['\u{9762}\u{6761}','mi\u{E0}nti\u{E1}o','noodle'],
+        ['\u{660E}\u{767D}','m\u{ED}ngbai','clear'],
+        ['\u{62FF}','n\u{E1}','take'],
+        ['\u{54EA} \u{FF08}\u{54EA}\u{513F}\u{FF09}','n\u{1CE}(n\u{1CE}r)','Which (where)'],
+        ['\u{90A3} \u{FF08}\u{90A3}\u{513F}\u{FF09}','n\u{E0}(n\u{E0}r)','That (there)'],
+        ['\u{5976}\u{5976}','n\u{1CE}inai','grandma'],
+        ['\u{5357}','n\u{E1}n','south'],
+        ['\u{96BE}','n\u{E1}n','disaster; blame'],
+        ['\u{96BE}\u{8FC7}','n\u{E1}ngu\u{F2}','Sorry'],
+        ['\u{5462}','ne',''],
+        ['\u{5E74}\u{7EA7}','ni\u{E1}nj\u{ED}','grade'],
+        ['\u{5E74}\u{8F7B}','ni\u{E1}nq\u{12B}ng','Young'],
+        ['\u{9E1F}','ni\u{1CE}o','bird'],
+        ['\u{52AA}\u{529B}','n\u{1D4}l\u{EC}','Strive'],
+        ['\u{722C}\u{5C71}','p\u{E1}sh\u{101}n','Mountain climbing'],
+        ['\u{76D8}\u{5B50}','p\u{E1}nzi','plate'],
+        ['\u{80D6}','p\u{E0}ng','fat'],
+        ['\u{5564}\u{9152}','p\u{ED}ji\u{1D4}','Beer'],
+        ['\u{8461}\u{8404}','p\u{FA}tao','Grape'],
+        ['\u{666E}\u{901A}\u{8BDD}','p\u{1D4}t\u{14D}nghu\u{E0}','Mandarin'],
+        ['\u{5176}\u{5B9E}','q\u{ED}sh\u{ED}','actually'],
+        ['\u{5176}\u{4ED6}','q\u{ED}t\u{101}','Other'],
+        ['\u{9A91}','q\u{ED}','ride'],
+        ['\u{5947}\u{602A}','q\u{ED}gu\u{E0}i','strange'],
+        ['\u{94C5}\u{7B14}','qi\u{101}nb\u{1D0}','pencil'],
+        ['\u{6E05}\u{695A}','q\u{12B}ngchu','clear'],
+        ['\u{79CB}','qi\u{16B}','autumn'],
+        ['\u{88D9}\u{5B50}','q\u{FA}nzi','skirt'],
+        ['\u{7136}\u{540E}','r\u{E1}nh\u{F2}u','Then'],
+        ['\u{70ED}\u{60C5}','r\u{E8}q\u{ED}ng','Enthusiasm'],
+        ['\u{8BA4}\u{4E3A}','r\u{E8}nw\u{E9}i','think'],
+        ['\u{8BA4}\u{771F}','r\u{E8}nzh\u{113}n','earnest'],
+        ['\u{5BB9}\u{6613}','r\u{F3}ngy\u{EC}','easily'],
+        ['\u{5982}\u{679C}','r\u{FA}gu\u{1D2}','If'],
+        ['\u{4F1E}','s\u{1CE}n','umbrella'],
+        ['\u{4E0A}\u{7F51}','sh\u{E0}ngw\u{1CE}ng','Surf the Internet'],
+        ['\u{8C01}','sh\u{E9}i','who'],
+        ['\u{751F}\u{6C14}','sh\u{113}ngq\u{EC}','get angry'],
+        ['\u{58F0}\u{97F3}','sh\u{113}ngy\u{12B}n','voice'],
+        ['\u{4F7F}','sh\u{1D0}','send'],
+        ['\u{4E16}\u{754C}','sh\u{EC}ji\u{E8}','world'],
+        ['\u{7626}','sh\u{F2}u','thin'],
+        ['\u{8212}\u{670D}','sh\u{16B}fu','comfortable'],
+        ['\u{53D4}\u{53D4}','sh\u{16B}shu','uncle'],
+        ['\u{6811}','sh\u{F9}','tree'],
+        ['\u{6570}\u{5B66}','sh\u{F9}xu\u{E9}','Mathematics'],
+        ['\u{5237}\u{7259}','shu\u{101}y\u{E1}','Brush one\u{2019}s teeth'],
+        ['\u{53CC}','shu\u{101}ng','double'],
+        ['\u{6C34}\u{5E73}','shu\u{1D0}p\u{ED}ng','level'],
+        ['\u{53F8}\u{673A}','s\u{12B}j\u{12B}','Driver'],
+        ['\u{867D}\u{7136}','su\u{12B}r\u{E1}n','although'],
+        ['\u{592A}\u{9633}','t\u{E0}iy\u{E1}ng','sunlight'],
+        ['\u{7CD6}','t\u{E1}ng','sugar'],
+        ['\u{7279}\u{522B}','t\u{E8}bi\u{E9}','Especially'],
+        ['\u{75BC}','t\u{E9}ng','They hurt'],
+        ['\u{63D0}\u{9AD8}','t\u{ED}g\u{101}o','increase'],
+        ['\u{4F53}\u{80B2}','t\u{1D0}y\u{F9}','Sports'],
+        ['\u{751C}','ti\u{E1}n','sweet'],
+        ['\u{6761}','ti\u{E1}o','strip'],
+        ['\u{540C}\u{4E8B}','t\u{F3}ngsh\u{EC}','Colleague'],
+        ['\u{540C}\u{610F}','t\u{F3}ngy\u{EC}','Agree'],
+        ['\u{5934}\u{53D1}','t\u{F3}ufa','Hair'],
+        ['\u{7A81}\u{7136}','t\u{16B}r\u{E1}n','suddenly'],
+        ['\u{56FE}\u{4E66}\u{9986}','t\u{FA}sh\u{16B}gu\u{1CE}n','Library'],
+        ['\u{817F}','tu\u{1D0}','leg'],
+        ['\u{5B8C}\u{6210}','w\u{E1}nch\u{E9}ng','complete'],
+        ['\u{7897}','w\u{1CE}n','bowl'],
+        ['\u{4E07}','w\u{E0}n','ten thousand'],
+        ['\u{5FD8}\u{8BB0}','w\u{E0}ngj\u{EC}','forget'],
+        ['\u{5582}','w\u{E8}i','feed'],
+        ['\u{4E3A}','w\u{E8}i','by'],
+        ['\u{4E3A}\u{4E86}','w\u{E8}ile','in order to'],
+        ['\u{4F4D}','w\u{E8}i','position'],
+        ['\u{6587}\u{5316}','w\u{E9}nhu\u{E0}','Culture'],
+        ['\u{897F}','x\u{12B}','west'],
+        ['\u{4E60}\u{60EF}','x\u{ED}gu\u{E0}n','Habit'],
+        ['\u{6D17}\u{624B}\u{95F4}','x\u{1D0}sh\u{1D2}uji\u{101}n','Restroom'],
+        ['\u{6D17}\u{6FA1}','x\u{1D0}z\u{1CE}o','Take a shower'],
+        ['\u{590F}','xi\u{E0}','summer'],
+        ['\u{5148}','xi\u{101}n','before'],
+        ['\u{9999}\u{8549}','xi\u{101}ngji\u{101}o','Banana'],
+        ['\u{76F8}\u{540C}','xi\u{101}ngt\u{F3}ng','identical'],
+        ['\u{76F8}\u{4FE1}','xi\u{101}ngx\u{EC}n','believe'],
+        ['\u{50CF}','xi\u{E0}ng','image'],
+        ['\u{5C0F}\u{5FC3}','xi\u{1CE}ox\u{12B}n','Look out'],
+        ['\u{6821}\u{957F}','xi\u{E0}ozh\u{1CE}ng','Principal'],
+        ['\u{978B}','xi\u{E9}','shoes'],
+        ['\u{65B0}\u{95FB}','x\u{12B}nw\u{E9}n','Journalism'],
+        ['\u{65B0}\u{9C9C}','x\u{12B}nxi\u{101}n','fresh'],
+        ['\u{4FE1}','x\u{EC}n','letter'],
+        ['\u{884C}\u{674E}\u{7BB1}','x\u{ED}nglixi\u{101}ng','Trunk'],
+        ['\u{5174}\u{8DA3}','x\u{EC}ngq\u{F9}','Interest'],
+        ['\u{718A}\u{732B}','xi\u{F3}ngm\u{101}o','Panda'],
+        ['\u{9700}\u{8981}','x\u{16B}y\u{E0}o','Need'],
+        ['\u{9009}\u{62E9}','xu\u{1CE}nz\u{E9}','Choice'],
+        ['\u{96EA}','xu\u{11B}','Snow'],
+        ['\u{773C}\u{955C}','y\u{1CE}nj\u{EC}ng','glasses'],
+        ['\u{8981}\u{6C42}','y\u{101}oqi\u{FA}','Requirement'],
+        ['\u{7237}\u{7237}','y\u{E9}ye','grandpa'],
+        ['\u{4E00}\u{5B9A}','y\u{ED}d\u{EC}ng','Certain'],
+        ['\u{4E00}\u{5171}','y\u{ED}g\u{F2}ng','Altogether'],
+        ['\u{4E00}\u{4F1A}\u{513F}','y\u{ED}hu\u{EC}r','A little while'],
+        ['\u{4E00}\u{6837}','y\u{ED}y\u{E0}ng','equally'],
+        ['\u{4EE5}\u{540E}','y\u{1D0}h\u{F2}u','In the future'],
+        ['\u{4EE5}\u{524D}','y\u{1D0}qi\u{E1}n','before'],
+        ['\u{4EE5}\u{4E3A}','y\u{1D0}w\u{E9}i','Think'],
+        ['\u{4E00}\u{822C}','y\u{EC}b\u{101}n','commonly'],
+        ['\u{4E00}\u{8FB9}','y\u{EC}bi\u{101}n','One side'],
+        ['\u{4E00}\u{76F4}','y\u{EC}zh\u{ED}','always'],
+        ['\u{97F3}\u{4E50}','y\u{12B}nyu\u{E8}','Music'],
+        ['\u{94F6}\u{884C}','y\u{ED}nh\u{E1}ng','Bank'],
+        ['\u{5E94}\u{8BE5}','y\u{12B}ngg\u{101}i','Should'],
+        ['\u{5F71}\u{54CD}','y\u{1D0}ngxi\u{1CE}ng','Influence'],
+        ['\u{7528}','y\u{F2}ng','use'],
+        ['\u{6E38}\u{620F}','y\u{F3}ux\u{EC}','Game'],
+        ['\u{6709}\u{540D}','y\u{1D2}um\u{ED}ng','Famous'],
+        ['\u{53C8}','y\u{F2}u','also'],
+        ['\u{9047}\u{5230}','y\u{F9}d\u{E0}o','encounter'],
+        ['\u{613F}\u{610F}','yu\u{E0}ny\u{EC}','Be willing'],
+        ['\u{6708}\u{4EAE}','yu\u{E8}liang','Moon'],
+        ['\u{8D8A}','yu\u{E8}','The more'],
+        ['\u{4E91}','y\u{FA}n','cloud'],
+        ['\u{7AD9}','zh\u{E0}n','station'],
+        ['\u{957F}','zh\u{1CE}ng','long'],
+        ['\u{7740}\u{6025}','zh\u{E1}oj\u{ED}','Worry'],
+        ['\u{7167}\u{987E}','zh\u{E0}og\u{F9}','look after'],
+        ['\u{7167}\u{7247}','zh\u{E0}opi\u{E0}n','Photo'],
+        ['\u{7167}\u{76F8}\u{673A}','zh\u{E0}oxi\u{E0}ngj\u{12B}','Camera'],
+        ['\u{8FD9} \u{FF08}\u{8FD9}\u{513F}\u{FF09}','zh\u{E8}(zh\u{E8}r)','Here (here)'],
+        ['\u{7740}','zhe','means'],
+        ['\u{53EA}','zh\u{1D0}','only'],
+        ['\u{4E2D}\u{95F4}','zh\u{14D}ngji\u{101}n','Middle'],
+        ['\u{7EC8}\u{4E8E}','zh\u{14D}ngy\u{FA}','finally'],
+        ['\u{79CD}','zh\u{1D2}ng','species'],
+        ['\u{91CD}\u{8981}','zh\u{F2}ngy\u{E0}o','important'],
+        ['\u{5468}\u{672B}','zh\u{14D}um\u{F2}','Weekend'],
+        ['\u{4E3B}\u{8981}','zh\u{1D4}y\u{E0}o','main'],
+        ['\u{795D}','zh\u{F9}','wish'],
+        ['\u{6CE8}\u{610F}','zh\u{F9}y\u{EC}','Be careful'],
+        ['\u{5B57}\u{5178}','z\u{EC}di\u{1CE}n','Dictionaries'],
+        ['\u{81EA}\u{5DF1}','z\u{EC}j\u{1D0}','Own'],
+        ['\u{603B}\u{662F}','z\u{1D2}ngsh\u{EC}','always'],
+        ['\u{6700}\u{8FD1}','zu\u{EC}j\u{EC}n','Lately'],
+        ['\u{4F5C}\u{4E1A}','zu\u{F2}y\u{E8}','homework'],
+        ['\u{4F5C}\u{7528}','zu\u{F2}y\u{F2}ng','Effect']
+    ]
+
     const learnedWords = JSON.parse(localStorage.getItem('learnedWords') ?? '[]')
-    let wordList = (hsk1.concat(hsk2)).filter((i) => !learnedWords.includes(i[0]))
+    let wordList = (hsk1.concat(hsk2).concat(hsk3)).filter((i) => !learnedWords.includes(i[0]))
     wordList = wordList.filter((s, i) => wordList.findIndex((j) => j[0] === s[0]) === i)
 
     let index;
